# workoutlib

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  coverage.cmake  ergworkout.cpp  ergworkout.cppm  fit.cppm  fit_profile.cppm  fitworkout.cpp  fitworkout.cppm  mrcworkout.cpp  mrcworkout.cppm  planworkout.cpp  planworkout.cppm  strip_macros.py  strip_macros.sh  workout.cpp  workout.cppm
CMake/: Coverage.cmake  STDModules.cmake
testing/: workout_test.cpp
